fixed footer overflow

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
 }
 
 h1 {
-    font-family: Sinistre-StCaroline;
+    font-family: Sinistre-StCaroline,monospace;
     margin-top:10px;
     margin-bottom: 50px;
     text-align: center;
@@ -139,9 +139,10 @@ h2 {
 }
 
 footer {
+    clear: both;
     background-color: #eeff41;
     color: black;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: fit-content;
